--- a/index.html
+++ b/index.html
@@ -58,7 +58,7 @@
   
   <div class="attribution">
     Challenge by <a href="https://www.frontendmentor.io?ref=challenge">Frontend Mentor</a>. 
-    Coded by <a href="#">Your Name Here</a>.
+    Coded by <a href="https://www.linkedin.com/in/yannsoler/">Yann Soler</a>.
   </div>
 </body>
 </html>
